# vector-search-with-rust-and-sqlite

./: README.md  book.toml
embeddings/: Cargo.toml
embeddings/src/: embeddings.db  main.rs  types.rs
src/: SUMMARY.md  chapter_1.md  chapter_2.md
