[package]
name = "embeddings"
version = "0.1.0"
edition = "2024"

path="src/lib.rs"
[dependencies]
bytemuck = "1.25.0"
reqwest = { version = "0.13.1", features = ["json","native-tls"]
rusqlite = { version = "0.38.0", features = ["load_extension", "
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.6"
tokio = { version = "1.49.0",features=["full"]}


